--- a/eo.html
+++ b/eo.html
@@ -6,9 +6,12 @@
     <title>Even and Odd</title>
     <script src="sc.js"></script>
     <link rel="stylesheet" href="st.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
-        <h2 id="tteo" class="po">Even or Odd</h2>
+        <h2 id="teo" class="po jersey-25-regular">Even or Odd</h2>
         <div class="center">
             <p id="pch">Choice an option</p>
             <select name="choice" id="choice" required>
