--- a/rps.html
+++ b/rps.html
@@ -6,10 +6,13 @@
     <title>Rock, Paper and Scissors</title>
     <script src="sc.js"></script>
     <link rel="stylesheet" href="st.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
-        <h2>Rock Paper Scissors</h2>
+        <h2 id="trpg" class="jersey-25-regular">Rock Paper Scissors</h2>
         <p id="ch">Choice your option</p>
 
         <div id="bs">
