--- a/eo.html
+++ b/eo.html
@@ -26,6 +26,6 @@
         </div>
         <p id="result"></p>
 
-        <a id="back2" href="menu.html">Back</a>
+        <a id="back2" href="index.html">Back</a>
 </body>
 </html>
