--- a/guessn.html
+++ b/guessn.html
@@ -20,6 +20,6 @@
 
     <p id="result"></p>
 
-    <a id="back3" href="menu.html">Back</a>
+    <a id="back3" href="index.html">Back</a>
 </body>
 </html>
